--- a/boot/menhir/BUILD.bazel
+++ b/boot/menhir/BUILD.bazel
@@ -63,7 +63,7 @@ bootstrap_module(
         ## (Type)
         ## (Typ)
         ## (Te)
-        ## (Syntaxerr)
+        "//parsing:Syntaxerr",
         "//stdlib:Stdlib.String",
         ## (Str)
         ## (Sig)
