--- a/bytecomp/BUILD.bazel
+++ b/bytecomp/BUILD.bazel
@@ -14,6 +14,7 @@ SIG_OPTS = ROOT_SIG_OPTS
 
 STDLIB = ["//stdlib"]
 
+## dev/test: build everthing
 bootstrap_library(
     name = "bytecomp",
     manifest  = [
@@ -37,6 +38,7 @@ bootstrap_library(
 # compilerlibs/ocamlbytecomp.cmxa: $(BYTECOMP_CMI) $(BYTECOMP:.cmo=.cmx)
 # 	$(CAMLOPT) -a $(OCAML_NATDYNLINKOPTS) -o $@ $(BYTECOMP:.cmo=.cmx)
 
+##############
 bootstrap_library(
     name = "ocamlbytecomp",
     manifest  = [
@@ -47,6 +49,10 @@ bootstrap_library(
         ":Emitcode",
         ":Instruct",
         ":Printinstr",
+
+        "//driver:Errors",
+        "//driver:Compile",
+        "//driver:Maindriver"
     ],
     visibility = ["//compilerlibs:__pkg__"]
 )
@@ -56,11 +62,17 @@ bootstrap_library(
 bootstrap_library(
     name = "ocamlcommon",
     manifest  = [
-        ":Meta",
-        ":Opcodes",
+        "//driver:Compenv",
+        "//driver:Compile_common",
+        "//driver:Compmisc",
+        "//driver:Main_args",
+        "//driver:Makedepend",
+        "//driver:Pparse",
         ":Bytesections",
         ":Dll",
-        ":Symtable"
+        ":Meta",
+        ":Opcodes",
+        ":Symtable",
     ],
     visibility = ["//compilerlibs:__pkg__"]
 )
@@ -87,14 +99,17 @@ bootstrap_module(
         "//stdlib:Stdlib.List",
         "//stdlib:Stdlib.Int",
         "//typing:Ident",
-        ## (Env)
+        "//typing:Env",
         "//utils:Config",
         "//utils:Clflags",
         "//parsing:Asttypes_cmi",
         "//stdlib:Stdlib.Array",
     ],
     data = ["//runtime:primitives"],
-    visibility = ["//driver:__pkg__"]
+    visibility = [
+        "//driver:__pkg__",
+        "//toplevel/byte:__pkg__",
+    ]
 )
 
 bootstrap_signature(
@@ -122,7 +137,7 @@ bootstrap_module(
         "//stdlib:Stdlib.List",
         "//stdlib:Stdlib.Format",
         "//utils:Config",
-        ## (Cmo_format)
+        "//file_formats:Cmo_format_cmi",
         "//utils:Clflags",
     ],
     data = ["//runtime:primitives"],
@@ -155,7 +170,7 @@ bootstrap_module(
         "//stdlib:Stdlib.String",
         "//stdlib:Stdlib.Printf",
         "//stdlib:Stdlib.Option",
-        ## (Opcodes)
+        "//bytecomp:Opcodes",
         "//stdlib:Stdlib.Obj",
         "//utils:Misc",
         "//stdlib:Stdlib.Marshal",
@@ -168,7 +183,7 @@ bootstrap_module(
         "//stdlib:Stdlib.Filename",
         ## (Consistbl)
         "//utils:Config",
-        ## (Cmo_format)
+        "//file_formats:Cmo_format_cmi",
         "//utils:Clflags",
         "//stdlib:Stdlib.Char",
         "//utils:Ccomp",
@@ -187,7 +202,7 @@ bootstrap_signature(
         ":Symtable",
         "//utils:Misc",
         "//stdlib:Stdlib.Format",
-        ## (Cmo_format)
+        "//file_formats:Cmo_format_cmi",
     ],
     data = ["//runtime:primitives"]
 )
@@ -203,11 +218,11 @@ bootstrap_module(
         ":Bytelink",
         ":Bytegen",
         "//typing:Typemod",
-        ## (Translmod)
+        "//lambda:Translmod",
         ## (Subst)
         "//lambda:Simplif",
         "//lambda:Printlambda",
-        ## (Path)
+        "//typing:Path",
         "//utils:Misc",
         "//parsing:Location",
         "//utils:Load_path",
@@ -215,9 +230,9 @@ bootstrap_module(
         "//typing:Ident",
         "//stdlib:Stdlib.Format",
         "//stdlib:Stdlib.Filename",
-        ## (Env)
+        "//typing:Env",
         "//utils:Config",
-        ## (Cmo_format)
+        "//file_formats:Cmo_format_cmi",
         "//utils:Clflags",
     ],
     data = ["//runtime:primitives"],
@@ -275,7 +290,8 @@ bootstrap_module(
         "//utils:Binutils",
         "//stdlib:Stdlib.Array",
     ],
-    data = ["//runtime:primitives"]
+    data = ["//runtime:primitives"],
+    visibility = ["//toplevel:__subpackages__"]
 )
 
 bootstrap_signature(
@@ -313,12 +329,15 @@ bootstrap_module(
         ":Bytegen",
         ":Instruct",
         ":Opcodes",
-        ## (Btype)
-        ## (Env)
+        "//typing:Btype",
+        "//typing:Env",
         ## (LongString)
     ],
     data = ["//runtime:primitives"],
-    visibility = ["//driver:__pkg__"]
+    visibility = [
+        "//driver:__pkg__",
+        "//toplevel/byte:__pkg__",
+    ]
 )
 
 bootstrap_signature(
@@ -346,7 +365,7 @@ bootstrap_module(
         ## (Subst)
         "//parsing:Location",
         "//typing:Ident",
-        ## (Env)
+        "//typing:Env",
     ],
     data = ["//runtime:primitives"]
 )
@@ -362,7 +381,7 @@ bootstrap_signature(
         ## (Subst)
         "//parsing:Location",
         "//typing:Ident",
-        ## (Env)
+        "//typing:Env",
     ],
     data = ["//runtime:primitives"],
     visibility = ["//driver:__pkg__"]
@@ -377,7 +396,8 @@ bootstrap_module(
         ":Instruct",
         "//stdlib:Stdlib.Obj",
     ],
-    data = ["//runtime:primitives"]
+    data = ["//runtime:primitives"],
+    visibility = ["//toplevel/byte:__pkg__"]
 )
 
 bootstrap_signature(
@@ -398,7 +418,8 @@ bootstrap_module(
     opts = MODULE_OPTS,
     deps   = STDLIB + [
     ],
-    data = ["//runtime:primitives"]
+    data = ["//runtime:primitives"],
+    visibility = ["//toplevel/byte:__pkg__"]
 )
 
 ## root Makefile:
@@ -472,7 +493,10 @@ bootstrap_module(
         "//stdlib:Stdlib.Array",
     ],
     data = ["//runtime:primitives"],
-    visibility = ["//driver:__pkg__"]
+    visibility = [
+        "//driver:__pkg__",
+        "//toplevel/byte:__pkg__",
+    ]
 )
 
 bootstrap_signature(
@@ -517,7 +541,8 @@ bootstrap_module(
         ":Meta",
         #### (LongString)
     ],
-    data = ["//runtime:primitives"]
+    data = ["//runtime:primitives"],
+    visibility = ["//toplevel/byte:__pkg__"]
 )
 
 bootstrap_signature(
