--- a/parsing/BUILD.bazel
+++ b/parsing/BUILD.bazel
@@ -90,7 +90,10 @@ bootstrap_module(
         "//stdlib:Stdlib.Int32",
         "//stdlib:Stdlib.Int",
     ],
-    visibility = ["//typing:__pkg__"]
+    visibility = [
+        "//toplevel:__pkg__",
+        "//typing:__pkg__"
+    ]
 )
 
 bootstrap_signature(
@@ -214,6 +217,7 @@ bootstrap_signature(
         "//bytecomp:__pkg__",
         "//lambda:__pkg__",
         "//middle_end:__subpackages__",
+        "//toplevel:__subpackages__",
         "//typing:__pkg__"
     ]
 )
@@ -390,7 +394,11 @@ bootstrap_module(
         "//utils:Misc",
         ":Parser"
     ],
-    visibility = ["//file_formats:__pkg__"]
+    visibility = [
+        "//file_formats:__pkg__",
+        "//driver:__pkg__",
+        "//toplevel:__pkg__",
+    ]
 )
 
 bootstrap_ocamllex(
@@ -437,6 +445,7 @@ bootstrap_module(
         "//file_formats:__pkg__",
         "//lambda:__pkg__",
         "//middle_end:__subpackages__",
+        "//toplevel:__subpackages__",
         "//typing:__pkg__"
     ],
 )
@@ -466,6 +475,8 @@ bootstrap_module(
     ],
     visibility = [
         "//lambda:__pkg__",
+        "//toplevel:__pkg__",
+        "//toplevel/byte:__pkg__",
         "//typing:__pkg__"
     ]
 )
@@ -495,6 +506,7 @@ bootstrap_module(
     ],
     visibility = [
         "//driver:__pkg__",
+        "//toplevel:__pkg__",
         "//typing:__pkg__"
     ]
 )
@@ -510,6 +522,18 @@ bootstrap_signature(
         "//stdlib:Stdlib.Lexing",
         "//stdlib:Stdlib.Format",
     ]
+)
+
+bootstrap_module(
+    name   = "Parser",
+    struct = "parser.ml", ##FIXME: bug in rule
+    sig    = "Parser_cmi",
+    opts = MODULE_OPTS,
+    deps   = STDLIB + [
+        ":Ast_helper",
+        ":CamlinternalMenhirLib",
+    ],
+    visibility = ["//driver:__pkg__"]
 )
 
 # parsing/parser.ml: boot/menhir/parser.ml parsing/parser.mly \
@@ -531,17 +555,6 @@ genrule(
 	    "sed \"s/MenhirLib/CamlinternalMenhirLib/g\" " +
         "$(location //boot/menhir:parser.ml) > $@"
     ])
-)
-
-bootstrap_module(
-    name   = "Parser",
-    struct = "parser.ml", ##FIXME: bug in rule
-    sig    = "Parser_cmi",
-    opts = MODULE_OPTS,
-    deps   = STDLIB + [
-        ":Ast_helper",
-        ":CamlinternalMenhirLib",
-    ]
 )
 
 bootstrap_signature(
@@ -580,6 +593,7 @@ bootstrap_signature(
     visibility = [
         "//driver:__pkg__",
         "//lambda:__pkg__",
+        "//toplevel:__subpackages__",
         "//typing:__pkg__"
     ]
 )
@@ -602,6 +616,7 @@ bootstrap_module(
     ],
     visibility = [
         "//driver:__pkg__",
+        "//toplevel:__pkg__",
         "//typing:__pkg__"
     ]
 )
@@ -639,6 +654,7 @@ bootstrap_module(
     ],
     visibility = [
         "//driver:__pkg__",
+        "//toplevel:__pkg__",
         "//typing:__pkg__"
     ]
 )
@@ -663,7 +679,8 @@ bootstrap_module(
     deps   = STDLIB + [
         ":Location", ## (Parsing Location)
         "//stdlib:Stdlib.Format",
-    ]
+    ],
+    visibility = ["//toplevel:__pkg__"]
 )
 
 bootstrap_signature(
